[metadata]
name = mac-tag
version = 2018.11.19
url = https://github.com/looking-for-a-job/mac-tag.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = finder tag

[options]
install_requires = 
	public
	runcmd
	setuptools
	this_is
	values
packages = 
	mac_tag
