# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-tag
version = 2019.4.13
url = https://github.com/looking-for-a-job/mac-tag.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = finder tag

[options]
install_requires = 
	public
	runcmd
	setuptools
	values
packages = 
	mac_tag
